fix death audio glitch and leaderboard overflow

--- a/client/style.css
+++ b/client/style.css
@@ -641,7 +641,7 @@ canvas {
 .buttonBox {
   width: 100%;
   position: relative;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 .buttonBox > h1 {
